<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg" >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyMaterialTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/MyMaterialTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_i"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                style="@style/CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp" >


                    <LinearLayout
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_edit_text1"
                        android:layout_margin="5dp"
                        android:padding="10dp" >

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <EditText
                                android:id="@+id/input_firstname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/your_firstname"
                                android:maxLines="1"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_edit_text1"
                        android:layout_margin="5dp"
                        android:padding="10dp" >

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <EditText
                                android:id="@+id/input_lastname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/your_lastname"
                                android:maxLines="1"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_edit_text1"
                        android:layout_margin="5dp"
                        android:padding="10dp" >

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <EditText
                                android:id="@+id/input_gender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/your_gender"
                                android:maxLines="1"
                                android:focusable="false"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_edit_text1"
                        android:layout_margin="5dp"
                        android:padding="10dp" >

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <EditText
                                android:id="@+id/input_city"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/your_city"
                                android:maxLines="1"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/church"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_edit_text1"
                        android:layout_margin="5dp"
                        android:padding="10dp" >

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_church"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <EditText
                                android:id="@+id/input_church"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/your_church"
                                android:maxLines="1"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_proceed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_button1"
                        android:text="@string/button_proceed"
                        android:textSize="30sp"
                        android:layout_marginTop="20dp"
                        android:padding="10dp"
                        android:textColor="@color/white_color" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>